# leetcode-876

./: CMakeLists.txt  README.md  build-and-run.sh  notes.md
incl/: list.h  main.h  problem.h  solution.h  util.h
src/: list.c  main.c  problem.c
